[spherification] spheres billboard split tests

--- a/app/assets/stylesheets/billboard.css.sass
+++ b/app/assets/stylesheets/billboard.css.sass
@@ -13,6 +13,7 @@
       margin: 15% auto
       font-size: 38px
       line-height: 36px
+      text-align: center
       .heading1
         font-weight: 300
         text-transform: uppercase
@@ -39,10 +40,23 @@
         opacity: 0
         @include animation(showheading 1s 4s 1 forwards)
       .heading5
-        font-weight: 500
+        font-weight: 200
         text-align: center
         opacity: 0
         @include animation(showheading 2s 5s 1 forwards)
+      .heading3-b
+        font-weight: 200
+        font-size: 40px
+        letter-spacing: 1px
+        text-transform: uppercase
+        opacity: 0
+        @include animation(showheading 1s 4s 1 forwards)
+      .heading4-b
+        font-weight: 500
+        font-size: 44px
+        letter-spacing: 15px
+        opacity: 0
+        @include animation(showheading 1s 4s 1 forwards)
 
   .background
     height: 541px
