--- a/app/views/courses/_spherification_a.html.haml
+++ b/app/views/courses/_spherification_a.html.haml
@@ -68,6 +68,7 @@
           - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
             .annotation
               = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
       /.row-fluid
       /  .span6
       /    = image_tag 'https://www.filepicker./io/api/file/Mn5unIy2TSGXjBRiRsnj'
@@ -91,6 +92,7 @@
           - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
             .annotation
               = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
       /.row-fluid
       /  .span6
       /    = image_tag 'https://www.filepicker./io/api/file/10jMQrfrTYazji1Sc4XA'
@@ -113,6 +115,7 @@
           - Course::SPHERIFICATION_PROFESSIONAL[:equipment].each do |equipment|
             .annotation
               = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
       /.row-fluid
       /  .span6
       /    = image_tag 'https://www.filepicker./io/api/file/FBnDnqcUQRetfBswxNzq'
