--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -130,7 +130,7 @@
     .annotation
       // Syringe
       &:nth-child(1)
-        top: -5%
+        top: 10%
         left: 30%
       // Spoon
       &:nth-child(2)
@@ -170,3 +170,9 @@
         font-weight: 600
         top: 5%
         left: 55%
+
+@media (min-width: 768px) and (max-width: 979px)
+  .annotated
+    .annotations
+      .annotation
+        font-size: 13px
