--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -97,6 +97,45 @@
     a
       text-decoration: none
 
+.media-box-3
+  font-family: 'Raleway', sans-serif
+  font-weight: 500
+  @include boxsizing
+  position: relative
+  width: 360px
+  height: 272px
+  border: 1px solid $light-gray
+  padding: 10px
+  margin: 10px
+  background: white
+  font-weight: bold
+  color: black
+  float: left
+  @include transition(all 300ms)
+  img
+    width: 100%
+    margin: 10px 0px
+  a
+    color: black
+    @include transition(all 300ms)
+    .media-box-3-title
+      font-weight: 500
+      font-size: 14px
+      text-transform: uppercase
+      height: 20px
+      text-overflow: ellipsis
+      white-space: nowrap
+      overflow: hidden
+    .media-box-3-footer
+      font-weight: 500
+      .footer-left
+        text-transform: uppercase
+  &:hover
+    border-color: $orange
+    cursor: pointer
+    a
+      text-decoration: none
+
 .media-list-item
   float: left
   width: 100%
