[index pages] update

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -1,5 +1,6 @@
 @import 'mixins'
 
+/// MEDIA BOX ///
 .media-box
   @include boxsizing
   position: relative
@@ -62,6 +63,8 @@
   //margin-right: 10px
   margin: 20px
 
+/// MEDIA BOX 2 ///
+
 .media-box-2
   @include boxsizing
   position: relative
@@ -96,6 +99,8 @@
     cursor: pointer
     a
       text-decoration: none
+
+/// MEDIA BOX 3 ///
 
 .media-box-3
   font-family: 'Raleway', sans-serif
@@ -135,6 +140,8 @@
     cursor: pointer
     a
       text-decoration: none
+
+/// MEDIA LIST ITEM ///
 
 .media-list-item
   float: left
