--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -34,6 +34,22 @@
         %i.icon-pinterest
         %span Pinterest
 
+      .section
+        - if @upload.likes.any?
+          %h4 People that have liked this upload:
+          %ul
+            - @upload.likes.each do |like|
+              .section
+                = link_to user_profile_url(like.user.id) do
+                  = image_tag filepicker_circle_image(like.user.image_id), class: "img-circle", width: "30"
+                  = like.user.name
+                liked this
+                = "#{time_ago_in_words(like.created_at)}"
+                ago
+    
+
+
+
       %hr
         - disqus_id = "upload-#{@upload.id}"
         = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @upload.recipe_name, disqus_url: upload_url(@upload)
