--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -40,11 +40,11 @@
     paramScaling = #{params[:scaling]};
 
 %form(name="myform")
-  .container#activity-body.recipe_schema(ng-cloak="" ng-class="addEditModeClass()"){:itemscope => true, :itemtype => (@activity.is_recipe? ? "http://schema.org/Recipe" : nil), data: {:'activity-id' => @activity.id}}
+  .container#activity-body.recipe_schema(ng-class="addEditModeClass()"){:itemscope => true, :itemtype => (@activity.is_recipe? ? "http://schema.org/Recipe" : nil), data: {:'activity-id' => @activity.id}}
 
     .row.printable
 
-      .span6.relative
+      .span6.relative.ng-cloak
         %csEditPair#title-edit-pair
           %csEditPairShow
             %h1.activity-title(ng-bind-html-unsafe="activity.title || (editMode && 'Add title...')" itemprop='name' ng-class="disableIf(! activity.title.length)")
@@ -59,7 +59,7 @@
                 %select.unit(type="text" ng-model="activity.source_type" required="true" ng-options="s.id as s.name for s in sourceActivityTypes")
                 = link_to @activity.source_activity.title, activity_path(@activity.source_activity)
 
-      .span6.noprint
+      .span6.noprint.ng-cloak
 
         %div(collapse="editMode")
           - if ! @minimal
