prestore activity json on page

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -170,4 +170,6 @@
       %button.btn.btn-danger(ng-click="cancelEditMode()"){data: {dismiss: 'modal'}}
         Yes
 
+#preloaded-activity-json.hide
+  = @activity.to_json
 
