--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -41,6 +41,11 @@
   -webkit-animation: $value
   -o-animation: $value
 
+=raleway
+  font-family: 'Raleway', sans-serif
+  font-weight: 500
+  -webkit-font-smoothing: antialiased
+
 /* Colors */
 $orange: #e25f25
 //$orange: #DB7354
