[media box 3] responsive

--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -141,6 +141,17 @@
     a
       text-decoration: none
 
+@media (max-width: 1200px)
+  .media-box-3
+    width: 280px
+    height: 227px
+
+@media (max-width: 480px)
+  .media-box-3
+    width: 100%
+    height: inherit
+    margin: 10px 0px
+
 /// MEDIA LIST ITEM ///
 
 .media-list-item
