--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -40,4 +40,11 @@
     .span12
       %div(ng-controller='GalleryController')
         %h1
-          {{data.message}}
+        .media-box-3(ng-repeat='recipe in recipes')
+          = link_to '#' do
+            .media-box-3-title
+              {{recipe.title}}
+            %img(ng-src="{{recipeImageURL(recipe, 400)}}")
+            .media-box-3-footer
+              .footer-left
+                {{recipe.difficulty}}
