--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -40,11 +40,39 @@
     .span12
       %div(ng-controller='GalleryController')
         %h1
-        .media-box-3(ng-repeat='recipe in recipes')
-          = link_to '#' do
-            .media-box-3-title
-              {{recipe.title}}
-            %img(ng-src="{{recipeImageURL(recipe, 400)}}")
-            .media-box-3-footer
-              .footer-left
-                {{recipe.difficulty}}
+        / .flat-form
+        /   %form
+        /     %input(ng-model='search' placeholder='Enter Name')
+        .gallery-filter
+          .dropdown
+            = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
+              Date
+              %i.icon-angle-down
+            %ul.dropdown-menu
+              %li(ng-click="date = '-updated_at'")
+                = link_to 'Most Recent', 'javascript:void(0);'
+              %li(ng-click="date = 'updated_at'")
+                = link_to 'Oldest', 'javascript:void(0);'
+          .dropdown
+            = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
+              Difficulty
+              %i.icon-angle-down
+            %ul.dropdown-menu
+              %li(ng-click="filters.difficulty = 'easy'")
+                = link_to 'Easy', 'javascript:void(0);'
+              %li(ng-click="filters.difficulty = 'intermediate'")
+                = link_to 'Intermediate', 'javascript:void(0);'
+              %li(ng-click="filters.difficulty = 'advanced'")
+                = link_to 'Advanced', 'javascript:void(0);'
+          .dropdown
+            %div(ng-click="filters = {}")
+              = link_to 'Clear x', 'javascript:void(0);'
+        %div
+          .media-box-3(ng-repeat='recipe in recipes | filter:search | filter:filters | orderBy:date')
+            %a(href= 'activities/{{recipe.slug}}')
+              .media-box-3-title
+                {{recipe.title}}
+              %img(ng-src="{{recipeImageURL(recipe, 400)}}")
+              .media-box-3-footer
+                .footer-left
+                  {{recipe.difficulty}}
