--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -68,11 +68,11 @@
             %div(ng-click="filters = {}")
               = link_to 'Clear x', 'javascript:void(0);'
         %div
-          .media-box-3(ng-repeat='recipe in recipes | filter:search | filter:filters | orderBy:date')
-            %a(href= 'activities/{{recipe.slug}}')
+          .media-box-3(ng-repeat='activity in activities | filter:search | filter:filters | orderBy:date')
+            %a(href= 'activities/{{activity.slug}}')
               .media-box-3-title
-                {{recipe.title}}
-              %img(ng-src="{{recipeImageURL(recipe, 400)}}")
+                {{activity.title}}
+              %img(ng-src="{{activityImageURL(activity, 400)}}")
               .media-box-3-footer
                 .footer-left
-                  {{recipe.difficulty}}
+                  {{activity.difficulty}}
